--- a/src/data/grammar/mtg/gameplay/mtg-decks.yaml
+++ b/src/data/grammar/mtg/gameplay/mtg-decks.yaml
@@ -6,7 +6,7 @@
       "[_format:#format#]#_format# #creatureTypesPlural.capitalize#",
       "[_format:#format#]#_format# #deck#",
       "[_format:#format#]#_format# #deckVariation#",
-      "#mtgColors.capitalize# #deck#",
+      "#searchableColor.capitalize# #deck#",
       "[_deck:#deckArch#,#preconDeck#]#_deck#"
   ],
   "deckArchOrCategory": [
@@ -17,7 +17,7 @@
       "[_format:#format#]#_format# #creatureTypesPlural.capitalize#",
       "[_format:#format#]#_format# #deck#",
       "[_format:#format#]#_format# #deckVariation#",
-      "#mtgColors.capitalize# #deck#",
+      "#searchableColor.capitalize# #deck#",
       "[_deck:#deckArch#,#preconDeck#]#_deck#"
   ],
   "deck": [
@@ -60,15 +60,15 @@
       "Superfriends",
       "Survival",
       "Ponza",
-      "#mtgColors# Devotion",
+      "#searchableColor# Devotion",
       "#deckNameNumber#-Rack",
       "#deckNameNumber#-Post",
-      "#mtgColors# Deck Wins",
+      "#searchableColor# Deck Wins",
       "#definingCardname#-Go",
       "#creatureTypes.capitalize# in a Blender",
       "#creatureTypes.capitalize#vantage",
       "#creatureTypes.capitalize# [_parent:Dad,Dad,Dad,Mom]#_parent#",
-      "[_prefix:#creatureTypes#,#deckPrefix#] Breakfast",
+      "[_prefix:#creatureTypes#,#deckPrefix#]#_prefix# Breakfast",
       "#deckNameCompoundPrefix##deckNameCompoundSuffix#",
       "Counter#creatureTypes.s#"
   ],
@@ -179,54 +179,56 @@
       "viable once #randomRealCard# is [_outcome:banned,reprinted]#_outcome#"
   ],
   "deckLimitedArchetype": [
-  	"aggro",
-  	"midrange",
-  	"control",
-  	"goodstuff",
-  	"converge",
-  	"domain",
-  	"devoid",
-  	"delerium",
-  	"mill",
-  	"ramp"
+    "aggro",
+    "midrange",
+    "control",
+    "goodstuff",
+    "converge",
+    "domain",
+    "devoid",
+    "delerium",
+    "mill",
+    "ramp"
   ],
   "limitedDeckDescription": [
-		"a #mtgColors# #deckLimitedArchetype# deck",
-		"a #mtgColors# #deckLimitedArchetype# deck",
-		"a #mtgColors# #deckLimitedArchetype# deck",
-		"#mtgColors# #deckLimitedArchetype#",
-		"#mtgColors# #deckLimitedArchetype#",
-		"#mtgColors# #deckLimitedArchetype#",
-		"a #mtgColors# trainwreck",
-		"a #mtgColors# pile",
-		"a 4#num1-9#-card special"
-	],
-	"preconDeck": [
-		"Assemble the Doomsday Machine",
-		"Blazing Beasts of Myth",
-		"Esper Air Assault",
-		"Fun With Fungus",
-		"Future Shock",
-		"Grave Danger",
-		"Grixis Shambling Army",
-		"Izzet Gizmometry",
-		"Jungle Jam",
-		"Kjeldoran Cunning",
-		"Manipulative Monstrosities",
-		"Max Attax",
-		"Monstrous Surprise",
-		"Morph Mayhem",
-		"Psychic Labyrinth",
-		"Political Puppets",
-		"Rats' Nest",
-		"Sizzle Blizzard",
-		"Spectral Slam",
-		"Swell the Host",
-		"The Sparkler",
-		"Trounce-o-Matic",
-		"White Heat",
-		"Wicked Big",
-		"Widowmaker",
-		"Wrack and Rage"
-	]
+    "#searchableColor.a# #deckLimitedArchetype# deck",
+    "#searchableColor.a# #deckLimitedArchetype# deck",
+    "#searchableColor.a# #deckLimitedArchetype# deck",
+    "#searchableColor# #deckLimitedArchetype#",
+    "#searchableColor# #deckLimitedArchetype#",
+    "#searchableColor# #deckLimitedArchetype#",
+    "#deckQualityAdj.a# #searchableColor# [_deck:deck,trainwreck,pile]#_deck#",
+    "#deckQualityAdj.a# #deckLimitedArchetype# deck",
+    "#searchableColor.a# trainwreck",
+    "#searchableColor.a# pile",
+    "a 4#num1-9#-card special"
+  ],
+  "preconDeck": [
+    "Assemble the Doomsday Machine",
+    "Blazing Beasts of Myth",
+    "Esper Air Assault",
+    "Fun With Fungus",
+    "Future Shock",
+    "Grave Danger",
+    "Grixis Shambling Army",
+    "Izzet Gizmometry",
+    "Jungle Jam",
+    "Kjeldoran Cunning",
+    "Manipulative Monstrosities",
+    "Max Attax",
+    "Monstrous Surprise",
+    "Morph Mayhem",
+    "Psychic Labyrinth",
+    "Political Puppets",
+    "Rats' Nest",
+    "Sizzle Blizzard",
+    "Spectral Slam",
+    "Swell the Host",
+    "The Sparkler",
+    "Trounce-o-Matic",
+    "White Heat",
+    "Wicked Big",
+    "Widowmaker",
+    "Wrack and Rage"
+  ]
 }
