--- a/src/data/grammar/images/mtg-keep-or-mulligan.yaml
+++ b/src/data/grammar/images/mtg-keep-or-mulligan.yaml
@@ -1,6 +1,10 @@
 ---
+
 headlineKeepOrMulligan: >
-  [_format:#format#][_headerText:#svgMulliganHeaderText#][#svgMulliganBodyText#]#svgMulliganStatusText# {svg svgString=`#svgMulligan#`}
+  [_format:#format#][#initializeKeepOrMulligan#][_headerText:#svgMulliganHeaderText#][#svgMulliganBodyText#]#svgMulliganStatusText# {svg svgString=`#svgMulligan#`}
+
+initializeKeepOrMulligan: "[_deckColor:#searchableColor#]#_deckColor.hide#[opposingDeck:#opposingDeck#][_deck:#deckTest#]"
+
 svgMulliganStatusText:
 - "Keep or Mulligan? With #pro#"
 - "Keep or Mulligan? #_format# Edition"
@@ -36,11 +40,11 @@ svgMulliganBeforeText:
   on the draw. Your hand is:
 - >
   [_aboveTextSize:22px]You're playing Team Limited with #limitedDeckDescription#.
-  Your deck is not very aggressive, but your opponent’s deck is better than yours
-  and you feel that [#somePronoun#]#theirs# has more late-game power, so you side
-  in cards like #randomCardAlone# and try to go aggressive game 2. Your mana is OK but not
-  great: you have #landCategory.a# and two [_land:#landCategory#,#realLandCard#]#_land.s#,
-  you think. For game 3, on the draw, this is your hand:
+  Your deck is not very [_desc:aggressive,powerful,focused]#_desc#, but your opponent’s deck is better than yours
+  and you feel that [#somePronoun#]#theirs# has more [_more:late-game power,removal,bombs,quality cards,synergy]#_more#, so you side
+  in cards like #randomCardAlone# and try to [_strategy:go aggressive,get lucky,go wide,go under #them#,win the attrition battle]#_strategy# game 2. Your mana is [_manaBaseDesc:OK but not
+  great,really bad,amazing#comma# at least,a mess,not very consistent]#_manaBaseDesc#: you have #landCategory.a# and two [_land:#landCategory#,#realLandCard#]#_land.s#, [_verb:you think,you hope,if memory serves]#_verb#. 
+  For game 3, on the draw, this is your hand:
 - >
   [_aboveTextSize:26px]You’re playing #_format# #deck#. It’s game #gameNumber# on
   the draw against #opposingDeck#. This is your hand:
@@ -66,13 +70,12 @@ svgMulliganBeforeText:
   your #gameAccessory#,took a nap,broke a sleeve]#_outcome# last round and so did
   [#somePronoun#]#they#). Your opening hand is:
 - >
-  [_aboveTextSize:22px]You’re playing #multicolor.a# #creatureTypes#-based deck in
+  [_aboveTextSize:22px]You’re playing #_deckColor.a# #creatureTypes#-based deck in
   #cardSet# Draft. [_baseColor:#basicColors#]Your deck is base-#_baseColor# and your
-  mana is 1#num0-9# #basicLands#, #num1-5# [_otherLands:#basicLands#,#limitedLands#]#_otherLands#,
-  [_n:1,1,2]#_n# #realLandCard#. 1#num0-9# of your cards are #_baseColor#, with two
+  mana is 1#num0-9# #basicLands#, #num1-5# [_otherLands:#randomLandCardByColor#,#limitedLands#]#_otherLands#, [_n:1,1,2]#_n# #realLandCard#. 1#num0-9# of your cards are #_baseColor#, with two
   of those being [_multiplier:double,double,triple]#_multiplier#-#_baseColor#. Your
   deck is [_rating:above average,below average,average,amazing,good,bad,a trainwreck,a
-  steaming pile of garbage]#_rating# (a #num0-9#-#num0-9# deck). You’re on the #playOrDraw#
+  steaming pile of garbage,#deckQualityAdj#,#deckQualityAdj#]#_rating# (a #num0-9#-#num0-9# deck). You’re on the #playOrDraw#
   against #opposingDeck#. Your opening hand is:
 _aboveTextSize: 24px
 svgMulliganHeaderTextStyle: >
@@ -88,7 +91,19 @@ svgMulliganAfterTextStyle: >
   text-shadow: 1px 1px 1px rgb(60,60,60); text-align:center;
 svgMulliganCardFinderUrl: https://goodgamery.com/api/mtg/image?card=#_cardname#
 svgMulliganResetStyles: "[_aboveTextSize:24px]"
-svbBackgroundIndex: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10"]
+svgBackgroundIndex: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10"]
+
+svgMulliganHandCard:
+- "#realCard#"
+- "#realCard#"
+- "#realCard#"
+- "#randomNonlandCard#"
+- "#randomNonlandCard#"
+- "#randomNonlandCard#"
+- "#randomLandCardByColor#"
+- "#randomLandCardByColor#"
+- "#randomLandCardByColor#"
+
 svgMulligan: |
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="1849" height="840">
         <defs>
@@ -96,28 +111,28 @@ svgMulligan: |
                 <image x="0" y="0" width="223" height="310" xlink:href="./data/images/cardmask.png" />
             </mask>
             <svg id="Card1">
-                <image xlink:href="[_cardname:#realHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
+                <image xlink:href="[_cardname:#svgMulliganHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
             </svg>
             <svg id="Card2">
-                <image xlink:href="[_cardname:#realHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
+                <image xlink:href="[_cardname:#svgMulliganHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
             </svg>
             <svg id="Card3">
-                <image xlink:href="[_cardname:#realHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
+                <image xlink:href="[_cardname:#svgMulliganHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
             </svg>
             <svg id="Card4">
-                <image xlink:href="[_cardname:#realHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
+                <image xlink:href="[_cardname:#svgMulliganHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
             </svg>
             <svg id="Card5">
-                <image xlink:href="[_cardname:#realHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
+                <image xlink:href="[_cardname:#svgMulliganHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
             </svg>
             <svg id="Card6">
-                <image xlink:href="[_cardname:#realHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
+                <image xlink:href="[_cardname:#svgMulliganHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
             </svg>
             <svg id="Card7">
-                <image xlink:href="[_cardname:#realHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
+                <image xlink:href="[_cardname:#svgMulliganHandCard#]#svgMulliganCardFinderUrl#" x="0" y="0" mask="url(\#cardMask)" width="223" height="310" />
             </svg>
         </defs>
-        <image width="100%" height="100%" xlink:href="./data/images/keepormull/background#svbBackgroundIndex#.png" />
+        <image width="100%" height="100%" xlink:href="./data/images/keepormull/background#svgBackgroundIndex#.png" />
         <use xlink:href="\#Card1" x="2%" y="330" />
         <use xlink:href="\#Card2" x="16%" y="330" />
         <use xlink:href="\#Card3" x="30%" y="330" />
