--- a/src/data/grammar/mtg/card-related/cardfinder/searchable-card-category.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/searchable-card-category.yaml
@@ -73,6 +73,4 @@ cardCategoryClassTerm:
 - "[#searchableCardCategory#]#_cardCategoryClass#"
 - "[#searchableCardCategoryCustomQuery#]#_cardCategoryClass#"
 
-cardCategorySearch:
- - "[#searchableCardCategory#][#_cardCategorySearchTerm.cardSearchByText#]#_cardName1#"
- - "[#searchableCardCategoryCustomQuery#][#_customQuery.cardSearchCustomQuery#]#_cardName1#"
+# "randomCategoryCardWithOneWordName" rule (in utility-search-categories) to search 
