--- a/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
+++ b/src/data/grammar/mtg/card-related/cardfinder/utility-search-categories.yaml
@@ -124,4 +124,4 @@ cardQueryCategoryWithOneWordName:
  - >
   [#searchableCardCategoryCustomQuery#][_customQuery:#_customQuery# name!="? "][#_customQuery.cardSearchCustomQuery#]
 
-randomCategoryCardWithOneWordName: "#cardQueryCategoryWithOneWordName##_cardName1#"
+randomCategoryCardWithOneWordName: "#cardQueryCategoryWithOneWordName##_cardName#"
