--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -1,6 +1,7 @@
 {
   "people": ["#pros#","#pros#","#pro#","#pro#","#otherPersonality#"],
   "person": ["#pro#","#pro#","#otherPersonality#"],
+  "miscPersonSingular": ["#pro#", "#otherPersonality#", "#playerCategory#", "#psychographic#", "#officialEntity#"],
   "peoplePlural": ["#pros#", "#pros#", "#playerCategory.s#[#pluralPronouns#]","#playerCategory.s#[#pluralPronouns#]", "#financialStakeholders#"],
   "pro": [
       "Kai Budde[#malePronouns#]",
